--- a/vue.html
+++ b/vue.html
@@ -16,10 +16,8 @@
 <link rel="stylesheet" type="text/css" href="js/leaflet.css">
 <link rel="stylesheet" type="text/css" href="vue.css">
 
-</head>
-<body>
 
-<div id="app">
+<script type="text/x-template" id="topbar-template">
     <div>
     <form v-bind="params" action='vue.html' type='get'>
        <input type='text' :value='params.searchkey' size=40 name='searchkey'>
@@ -34,6 +32,10 @@
        <div class='floatright'>Kuvat: Helsingin kaupunginmuseo / <a href='http://creativecommons.org/licenses/by/4.0/deed.fi'>CC-BY-4.0</a></div>
     </form>
     </div>
+</script>
+
+<script type="text/x-template" id="photos-template">
+  <div>
     <div v-for="(photo, index) in photos" class='photocontainer'>
       <div class='imagebuttons'   :class="{like: photo.like}">
          <button @click="likeclick(index)" class='likebutton' :value='photo.finna_id'>Like</button>
@@ -41,13 +43,14 @@
       </div>
       <img 
          class="thumbnail"
+         @click="showModal(index)"
          @mouseover="photo.ishovering = true"  
          @mouseout="photo.ishovering = false" 
          :src="'https://www.finna.fi' + photo.small_url" />
       <h3>{{ photo.title }}</h3>
-      <p>{{ photo.summary }}<p>
+      <p>{{ photo.summary }}</p>
       <ul>
-         <li v-if="photo.placeline"><a v-bind='params' :href="'?searchkey=' + photo.placeline + '&coordfilter=' + params.coordfilter">{{photo.placeline}}</a></li>
+         <li v-if="photo.placeline"><a :href="'?searchkey=' + photo.placeline + '&coordfilter=' + params.coordfilter">{{photo.placeline}}</a></li>
          <li v-if="photo.dateline">{{photo.dateline}}</li>
          <li v-if="photo.lat">{{photo.lat}}, {{photo.lon}} </li>
          <li v-if="photo.author_name">{{photo.author_name}}</li>
@@ -55,10 +58,80 @@
          <li v-if="photo.imagerights_copyright!='CC BY 4.0'"><a :href="photo.imagerights_link">{{photo.imagerights_copyright}}</a></li>
       </ul>
     </div>
+  </div>
+</script>
+
+<script type="text/x-template" id="modal-template">
+  <transition name="modal">
+    <div class="modal-mask">
+      <div class="modal-wrapper">
+        <div class="modal-container">
+
+          <div class="modal-header">
+            <slot name="header">
+              {{ modal.photo.title }}
+            </slot>
+          </div>
+
+          <div class="modal-body" >
+            <slot name="body">
+               <div class='modal_col'>
+                  <div class='imagebuttons'   :class="{like: modal.photo.like}">
+                     <button @click="likeclick(modal.index); "  class='likebutton' :value='modal.photo.finna_id'>Like</button>
+                     <button @click="deleteclick(modal.index);$emit('close')" class='deletebutton' :value='modal.photo.finna_id'>Remove</button>
+                  </div>
+
+                  <img 
+                     class="modalimage1"
+                     @mouseover="modal.photo.ishovering = true"  
+                     @mouseout="modal.photo.ishovering = false" 
+                     :src="'https://www.finna.fi' + modal.photo.large_url" />
+               </div>
+               <div class='modal_col'>
+               <p>{{ modal.photo.summary }}</p>
+               <ul>
+                  <li v-if="modal.photo.dateline">{{modal.photo.dateline}}</li>
+                  <li v-if="modal.photo.lat">{{modal.photo.lat}}, {{modal.photo.lon}} </li>
+                  <li v-if="modal.photo.author_name">{{modal.photo.author_name}}</li>
+                  <li><a :href="'https://www.finna.fi/Record/' + modal.photo.finna_id">{{modal.photo.finna_id}}</a></li>
+                  <li v-if="modal.photo.imagerights_copyright!='CC BY 4.0'"><a :href="modal.photo.imagerights_link">{{modal.photo.imagerights_copyright}}</a></li>
+               </ul>
+
+               <div>
+            </slot>
+          </div>
+
+          <div class="modal-footer">
+            <slot name="footer">
+              footer
+              <button class="modal-default-button" @click="$emit('close')">
+                OK
+              </button>
+            </slot>
+          </div>
+        </div>
+      </div>
+    </div>
+  </transition>
+</script>
+
+</head>
+
+<body>
+
+<div id="app">
+  <topbar-component v-bind:params='params'></topbar-component>
+  <photos-component v-bind:photos='photos' v-bind:params='params' v-bind:modal='modal'></photos-component>
+  <modal v-if="modal.showModal" v-bind:photos='photos' v-bind:modal='modal' @close="modal.showModal = false"> </modal>
+  <div id='mapid'></div>
 </div>
-<div id="mapid">xxxx</div>
-
-
 
 </body>
 </html>
+
+  <!--button id="modal.show-modal"  v-bind:modal='modal'  @click="modal.showModal = true">Show Modal</button-->
+
+               <h3>{{ modal.photo.title }}</h3-->
+
+
+                  <!--li v-if="modal.photo.placeline"><a :href="'?searchkey=' + photo.placeline + '&coordfilter=' + params.coordfilter">{{modal.photo.placeline}}</a></li-->
